--- a/Fund_Web/Site/Contato.html
+++ b/Fund_Web/Site/Contato.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<nav>
-			<a href="file:///C:/Users/Rodrigo/Documents/Faculdade/Fund_Web/Pg_inicial.html" id = "home">Home</a>	&nbsp;	&nbsp;	
-		</nav>
-		<fieldset><legend id = "titulo">Fale Conosco</legend>
-		<link rel="stylesheet" type ="text/css" href="Estilo.css">
-	</head>
-		<body id= "corpo">
-				<div>
-				<form action="" method="post">
-				<label>E-mail: </label><input type="email" maxlenght="15"><br/>
-				<input type="radio" id="masculino" name="masculino" value="masculino">
-				<label for="masculino">Masc</label>
-				<input type="radio" id="feminino" name="feminino" value="feminino">
-				<label for="feminino">Fem</label><br/>
-				<textarea rows="10" cols="30">Comentarios</textarea><br/><br/>
-					<select name="Assunto">
-					<optgroup label="Problemas">
+
+<head>
+	<nav>
+		<a href="Pg_inicial.html" id="home">Home</a> &nbsp; &nbsp;
+	</nav>
+	<fieldset>
+		<legend id="titulo">Fale Conosco</legend>
+		<link rel="stylesheet" type="text/css" href="Estilo.css">
+</head>
+
+<body id="corpo">
+	<div>
+		<form action="" method="post">
+			<label>E-mail: </label><input type="email" maxlenght="15"><br />
+			<input type="radio" id="masculino" name="masculino" value="masculino">
+			<label for="masculino">Masc</label>
+			<input type="radio" id="feminino" name="feminino" value="feminino">
+			<label for="feminino">Fem</label><br />
+			<textarea rows="10" cols="30">Comentarios</textarea><br /><br />
+			<select name="Assunto">
+				<optgroup label="Problemas">
 					<option value="Bugs">Bug</option>
 					<option value="Pagina fora do ar">Pagina fora do ar</option>
-					</optgroup>
-					<optgroup label="Sugestoes">
+				</optgroup>
+				<optgroup label="Sugestoes">
 					<option value="Melhorias">Melhorias</option>
 					<option value="Novo assunto">Novo assunto</option>
-					</optgroup><br/><br/>
-				</div>	
-				<div>
-					<input type="submit" value="Enviar">
-					<input type="reset" value="Deletar">
-				</form>
-				</div>	
-		</body>
+				</optgroup><br /><br />
+	</div>
+	<div>
+		<input type="submit" value="Enviar">
+		<input type="reset" value="Deletar">
+		</form>
+	</div>
+</body>
 </fieldset>
+
 </html>
