--- a/Fund_Web/Site/D_a_D.html
+++ b/Fund_Web/Site/D_a_D.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html>
-		<head>
-				<title>Inteligência Artificial</title>
-				<meta charset="utf-8">
-				<link rel="stylesheet" type ="text/css" href="Estilo.css">
-		</head>
-		<body>
-				<header>
-							<h2>IA no dia a dia<h2>
-				</header><hr>
-				<nav>
-							<a href="file:///C:/Users/Rodrigo/Documents/Faculdade/Fund_Web/Pg_inicial.html">Home</a>	&nbsp;	&nbsp;					
-							<a href="file:///C:/Users/Rodrigo/Documents/Faculdade/Fund_Web/O_e_IA.html">O que é IA?</a>&nbsp;  &nbsp;
-							<a href="file:///C:/Users/Rodrigo/Documents/Faculdade/Fund_Web/D_a_D.html">IA no dia a dia</a>
-				</nav><hr>	
-					<div>
-						<p>
-						Estes são alguns exemplos de uso das IA:
-						</p>
-					</div>				
-					<div>
-						<ul>
-							<li>Celular;</li>
-							<li>Assitente pessoal;</li>
-							<li>Feed das redes sociais;</li>								
-						</ul>	
-					</div>
-		</body>
+
+<head>
+	<title>Inteligência Artificial</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="Estilo.css">
+</head>
+
+<body>
+	<header>
+		<h2>IA no dia a dia<h2>
+	</header>
+	<hr>
+	<nav>
+		<a href="Pg_inicial.html">Home</a> &nbsp; &nbsp;
+		<a href="O_e_IA.html">O que é IA?</a>&nbsp; &nbsp;
+		<a href="#">IA no dia a dia</a>
+	</nav>
+	<hr>
+	<div>
+		<p id="dest">
+			Estes são alguns exemplos de uso das IA:
+		</p>
+	</div>
+	<div>
+		<ul id="introd">
+			<li>Celular;</li>
+			<li>Assitente pessoal;</li>
+			<li>Feed das redes sociais;</li>
+		</ul>
+	</div>
+</body>
+
 </html>
